--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
+    "react-toastify": "^11.0.5",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
